<resources>
    <string name="app_name">Imaker</string>
    <string name="test">测试</string>
    <string name="location">定位</string>
    <string name="exit">退出</string>
    <string name="author">Sakurajima Mai</string>
    <string name="authorMail">SakurajimaMai@gmail.com</string>
    <string name="please_enter_password">请输入密码</string>
    <string name="or_en">or</string>
    <string name="please_enter_username">请输入用户名</string>
    <string name="please_enter_tel">请输入电话</string>
    <string name="please_enter_email">请输入邮箱</string>
    <string name="please_enter_age">请输入年龄</string>
    <string name="please_choose_birthday">请选择生日</string>
    <string name="create_user">创建账户</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bond">未绑定</string>
    <string name="bonded">已绑定</string>
    <string name="animation">动画</string>
    <string name="other_setting_icon">其他设置图标</string>
    <string name="automatically_close_windows_in_rainy_days">雨天自动关窗</string>
    <string name="other_setting">其他设置</string>
    <string name="recharge_money_icon">充值图标</string>
    <string name="recharge_money">账户充值</string>
    <string name="arrow_icon">箭头图标</string>
    <string name="balance">账户余额</string>
    <string name="consumption">购药记录</string>
    <string name="substitute_drugs">待取药品</string>
    <string name="card_package_icon">卡包图标</string>
    <string name="card_package">卡包</string>
    <string name="more_features">更多功能敬请期待</string>
    <string name="welcome_hans">欢迎</string>
    <string name="setting">设置</string>
    <string name="please_enter_recharge_money">请输入充值金额</string>
    <string name="yes_hans">确定</string>
    <string name="no_hans">取消</string>
    <string name="current_balance">当前余额</string>
    <string name="click_to_enter">点击进入</string>
    <string name="teacher_login">教师登录</string>
    <string name="class_no">课程号</string>
    <string name="teacher_no">教师号</string>
    <string name="begin_class">上课</string>
    <string name="finish_class_icon">下课图标</string>
    <string name="finish_class">下课</string>
    <string name="begin_class_icon">上课图标</string>
    <string name="add_student">添加学生</string>
    <string name="add_student_icon">添加学生图标</string>
    <string name="reissue_icon">补签图标</string>
    <string name="reissue">补签</string>
    <string name="please_enter_password_to_sure">输入密码以便确认</string>
    <string name="course_no">补签节次</string>
    <string name="please_enter_reissue_class_no">请输入补签第几次课</string>
    <string name="stu_no">学生学号</string>
    <string name="yes_en">yes</string>
    <string name="no_en">no</string>
    <string name="lost_name">失物名</string>
    <string name="lost_description">失物描述</string>
    <string name="lost_tag">失物标签</string>
    <string name="check_in">签到</string>
    <string name="check_out">未签到次数</string>
    <string name="search_class_statistics">查询上课统计情况</string>
    <string name="sure">确定</string>
    <string name="student_check_in">学生签到</string>
    <string name="add_class">添加课堂</string>
    <string name="course_statistics">课堂统计</string>
    <string name="current_course_count">当前课堂节次</string>
    <string name="please_enter_course_no">请输入查询节次</string>
    <string name="check_status">签到状态</string>
    <string name="mail">邮件</string>
    <string name="home">主页</string>
    <string name="password">密码</string>
    <string name="class_inf">教室占用情况</string>
    <string name="sign_in">登录</string>
    <string name="refresh">刷新</string>
    <string name="title_background_picture">标题背景图片</string>
    <string name="welcome_en">Welcome!</string>
    <string name="username">用户名</string>
    <string name="sign_up">注册用户</string>
    <string name="forum">论坛</string>
    <string name="release">发布</string>
    <string name="data">数据</string>
    <string name="post_a_post">发布帖子</string>
    <string name="please_enter_your_post">说点什么吧</string>
    <string name="now_is_finding">在寻失物</string>
    <string name="add_find_notice">发布失物信息</string>
    <string name="please_enter_lost_name">请输入失物名</string>
    <string name="please_enter_lost_description">请输入失物描述</string>
    <string name="welcome">欢迎,</string>
    <string name="sports_competition">体育比赛</string>
    <string name="leader_board">排行榜</string>
    <string name="answer_contest">答题竞赛</string>
    <string name="multiplayer_pk">多人pk</string>
    <string name="join_en">join</string>
    <string name="person_inf">人流情况</string>
    <string name="class_status">教室情况</string>
    <string name="person_status">人流情况</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>