<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark_sea_blue"
            android:padding="10sp"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/titleLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_add_find_notice"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/test" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/add_find_notice"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>
            <TextView
                android:layout_marginTop="10sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lost_name"
                android:textSize="15sp"
                android:textColor="@color/white" />
            <EditText
                android:padding="5sp"
                android:id="@+id/stuNoEditText"
                android:drawablePadding="5sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/please_enter_lost_name"
                android:autofillHints="@string/test"
                android:inputType="text"
                android:background="@drawable/edit_text_background"/>
            <TextView
                android:layout_marginTop="10sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lost_description"
                android:textSize="15sp"
                android:textColor="@color/white" />
            <EditText
                android:id="@+id/stuNameEditText"
                android:padding="5sp"
                android:drawablePadding="5sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="100dp"
                android:hint="@string/please_enter_lost_description"
                android:inputType="text"
                android:autofillHints="@string/test"
                android:background="@drawable/edit_text_background"
                android:gravity="top"
                android:textCursorDrawable="@null"
                android:cursorVisible="false" />
            <TextView
                android:layout_marginTop="10sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lost_tag"
                android:textSize="15sp"
                android:textColor="@color/white" />
            <com.donkingliang.labels.LabelsView
                android:id="@+id/lostTagLv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:labelBackground="@drawable/label_bg"
                app:labelTextColor="@color/black"
                app:labelTextSize="14sp"
                app:labelTextPaddingBottom="5dp"
                app:labelTextPaddingLeft="10dp"
                app:labelTextPaddingRight="10dp"
                app:labelTextPaddingTop="5dp"
                app:lineMargin="10dp"
                app:wordMargin="10dp"
                app:selectType="MULTI" />
            <LinearLayout
                android:layout_marginTop="15sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <com.gcode.widget.ShapeButton
                    android:id="@+id/addYes"
                    android:layout_marginEnd="5sp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/yes_hans"
                    android:textSize="15sp"
                    app:button_shape="rounded_rect_shape"
                    app:button_rounded_rect_corner_radius="5dp"
                    app:button_normal_bg_color="@color/white"
                    tools:ignore="ButtonStyle" />
                <com.gcode.widget.ShapeButton
                    android:id="@+id/addNo"
                    android:layout_marginStart="5sp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/no_hans"
                    android:textSize="15sp"
                    app:button_shape="rounded_rect_shape"
                    app:button_rounded_rect_corner_radius="5dp"
                    app:button_normal_bg_color="@color/white"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</layout>