<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#006DC3"
        android:padding="10sp">
        <LinearLayout
            android:id="@+id/titleLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/reissue_icon"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/test" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/teacher_reissue"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>
        <TextView
            android:id="@+id/tchNoTextView"
            android:layout_marginTop="10sp"
            android:layout_below="@id/titleLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teacher_no"
            android:textSize="15sp"
            android:textColor="@color/white" />
        <EditText
            android:padding="5sp"
            android:id="@+id/tchNoEditText"
            android:drawableStart="@drawable/user_icon"
            android:drawablePadding="5sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tchNoTextView"
            android:hint="@string/please_enter_teacher_no"
            android:autofillHints="@string/test"
            android:inputType="text"
            android:background="@drawable/edit_text_white_background"/>
        <TextView
            android:id="@+id/passwordTextView"
            android:layout_marginTop="10sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:layout_below="@id/tchNoEditText" />
        <EditText
            android:id="@+id/passwordEditText"
            android:padding="5sp"
            android:drawableStart="@drawable/password_icon"
            android:drawablePadding="5sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/please_enter_password_to_sure"
            android:layout_below="@id/passwordTextView"
            android:inputType="textPassword"
            android:autofillHints="@string/test"
            android:background="@drawable/edit_text_white_background"/>
        <TextView
            android:id="@+id/stuNoTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stu_no"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:layout_marginTop="10sp"
            android:layout_below="@id/passwordEditText" />
        <EditText
            android:id="@+id/stuNoEditText"
            android:padding="5sp"
            android:drawableStart="@drawable/no_icon"
            android:drawablePadding="5sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/please_enter_student_no"
            android:layout_below="@id/stuNoTextView"
            android:inputType="text"
            android:autofillHints="@string/test"
            android:background="@drawable/edit_text_white_background"/>
        <TextView
            android:id="@+id/courseNoTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/course_no"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:layout_marginTop="10sp"
            android:layout_below="@id/stuNoEditText" />
        <EditText
            android:id="@+id/courseNoEditText"
            android:padding="5sp"
            android:drawableStart="@drawable/no_icon"
            android:drawablePadding="5sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/please_enter_reissue_class_no"
            android:layout_below="@id/courseNoTextView"
            android:inputType="text"
            android:autofillHints="@string/test"
            android:background="@drawable/edit_text_white_background"/>
        <LinearLayout
            android:layout_marginTop="15sp"
            android:layout_below="@id/courseNoEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/reissueIn"
                android:layout_marginEnd="5sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/yes_en"
                android:textSize="15sp"
                tools:ignore="ButtonStyle" />
            <Button
                android:id="@+id/reissueOut"
                android:layout_marginStart="5sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/no_en"
                android:textSize="15sp"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
    </RelativeLayout>
</layout>