<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <RelativeLayout
        android:orientation="vertical"
        android:background="#006DC3"
        android:padding="10sp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <LinearLayout
            android:id="@+id/titleLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/reissue_icon"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/test" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/course_statistics"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/titleCountLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5sp"
            tools:ignore="UseCompoundDrawables"
            android:layout_below="@id/titleLinearLayout">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/current_course_count"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"/>
            <TextView
                android:id="@+id/courseCountTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>
        <TextView
            android:id="@+id/classNoTextView"
            android:layout_marginTop="10sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/class_no"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:layout_below="@id/titleCountLinearLayout"/>
        <EditText
            android:padding="5sp"
            android:id="@+id/classNoEditText"
            android:drawableStart="@drawable/no_icon"
            android:drawablePadding="5sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/please_enter_course_no"
            android:autofillHints="@string/test"
            android:inputType="text"
            android:background="@drawable/edit_text_white_background"
            android:layout_below="@id/classNoTextView"/>
        <LinearLayout
            android:layout_marginTop="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/classNoEditText">
            <Button
                android:id="@+id/yes"
                android:layout_marginEnd="5sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/yes_hans"
                android:textSize="15sp"
                android:background="@drawable/button_white_gray_background"
                tools:ignore="ButtonStyle" />
            <Button
                android:id="@+id/no"
                android:layout_marginStart="5sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/no_hans"
                android:textSize="15sp"
                android:background="@drawable/button_white_gray_background"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
    </RelativeLayout>
</layout>