<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#006DC3"
        android:padding="10sp">
        <LinearLayout
            android:id="@+id/titleLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/teacher_login_icon"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/test" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/teacher_login"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>
        <TextView
            android:id="@+id/tchNoTextView"
            android:layout_marginTop="10sp"
            android:layout_below="@id/titleLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teacher_no"
            android:textSize="15sp"
            android:textColor="@color/white" />
        <EditText
            android:padding="5sp"
            android:id="@+id/tchNoEditText"
            android:drawableStart="@drawable/user_icon"
            android:drawablePadding="5sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tchNoTextView"
            android:hint="@string/please_enter_teacher_no"
            android:autofillHints="@string/test"
            android:inputType="text"
            android:background="@drawable/edit_text_white_background"/>
        <TextView
            android:id="@+id/passwordTextView"
            android:layout_marginTop="10sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:layout_below="@id/tchNoEditText" />
        <EditText
            android:id="@+id/passwordEditText"
            android:padding="5sp"
            android:drawableStart="@drawable/password_icon"
            android:drawablePadding="5sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/please_enter_password"
            android:layout_below="@id/passwordTextView"
            android:inputType="textPassword"
            android:autofillHints="@string/test"
            android:background="@drawable/edit_text_white_background"/>
        <TextView
            android:id="@+id/classNoTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/class_no"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:layout_marginTop="10sp"
            android:layout_below="@id/passwordEditText" />
        <EditText
            android:id="@+id/classNoEditText"
            android:padding="5sp"
            android:drawableStart="@drawable/no_icon"
            android:drawablePadding="5sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/please_enter_class_no"
            android:layout_below="@id/classNoTextView"
            android:inputType="text"
            android:autofillHints="@string/test"
            android:background="@drawable/edit_text_white_background"/>
        <LinearLayout
            android:layout_marginTop="15sp"
            android:layout_below="@id/classNoEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.gcode.gstylebutton.GStyleButton
                android:id="@+id/signIn"
                android:layout_marginEnd="5sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sign_in"
                android:textSize="15sp"
                app:button_shape="corner_rect_shape"
                app:rounded_rect_corner_radius="10dp"
                app:is_solid="true"
                app:style_background_color="@color/white"
                app:is_stroke="true"
                app:stroke_width="3dp"
                app:stroke_color="@color/gray"
                tools:ignore="ButtonStyle" />
            <Button
                android:id="@+id/signOut"
                android:layout_marginStart="5sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/exit"
                android:textSize="15sp"
                app:button_shape="corner_rect_shape"
                app:rounded_rect_corner_radius="10dp"
                app:is_solid="true"
                app:style_background_color="@color/white"
                app:is_stroke="true"
                app:stroke_width="3dp"
                app:stroke_color="@color/gray"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
    </RelativeLayout>
</layout>