<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <RelativeLayout
        android:orientation="vertical"
        android:background="#006DC3"
        android:padding="10sp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <LinearLayout
            android:id="@+id/titleLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/reissue_icon"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/test" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/student_check_in"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>
        <TextView
            android:id="@+id/classNoTextView"
            android:layout_marginTop="10sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/class_no"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:layout_below="@id/titleLinearLayout"/>
        <EditText
            android:padding="5sp"
            android:id="@+id/classNoEditText"
            android:drawableStart="@drawable/no_icon"
            android:drawablePadding="5sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/please_enter_class_no"
            android:autofillHints="@string/test"
            android:inputType="text"
            android:background="@drawable/edit_text_white_background"
            android:layout_below="@id/classNoTextView"/>
        <TextView
            android:id="@+id/tchNoTextView"
            android:layout_marginTop="10sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teacher_no"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:layout_below="@id/classNoEditText"/>
        <EditText
            android:id="@+id/tchNoEditText"
            android:padding="5sp"
            android:drawableStart="@drawable/password_icon"
            android:drawablePadding="5sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/please_enter_teacher_no"
            android:inputType="text"
            android:autofillHints="@string/test"
            android:background="@drawable/edit_text_white_background"
            android:layout_below="@id/tchNoTextView"/>
        <TextView
            android:id="@+id/stuNoTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stu_no"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:layout_marginTop="10sp"
            android:layout_below="@id/tchNoEditText"/>
        <EditText
            android:id="@+id/stuNoEditText"
            android:padding="5sp"
            android:drawableStart="@drawable/no_icon"
            android:drawablePadding="5sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/please_enter_student_no"
            android:inputType="text"
            android:autofillHints="@string/test"
            android:background="@drawable/edit_text_white_background"
            android:layout_below="@id/stuNoTextView"/>
        <LinearLayout
            android:layout_marginTop="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/stuNoEditText">
            <Button
                android:id="@+id/checkIn"
                android:layout_marginEnd="5sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/check_in"
                android:textSize="15sp"
                android:background="@drawable/button_white_gray_background"
                tools:ignore="ButtonStyle" />
            <Button
                android:id="@+id/checkOut"
                android:layout_marginStart="5sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/exit"
                android:textSize="15sp"
                android:background="@drawable/button_white_gray_background"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
    </RelativeLayout>
</layout>