<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#0A3180">
        <Button
            android:id="@+id/refresh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/refresh"
            android:layout_margin="5sp"
            android:background="@drawable/button_white_gray_background"/>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50sp"
            app:cardCornerRadius="10sp"
            android:layout_margin="5sp">
            <!--设置padding补全不足-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:baselineAligned="false">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/class_no"
                    android:gravity="center"
                    android:textColor="#617695"
                    android:textSize="18sp" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/student_no"
                    android:gravity="center"
                    android:textColor="#617695"
                    android:textSize="18sp"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/check_status"
                    android:gravity="center"
                    android:textColor="#617695"
                    android:textSize="18sp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/studentCourseStatusRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5sp"
            tools:context=".activity.CourseStatisticsActivity"/>
    </LinearLayout>
</layout>